vcluster_versioned_docs/version-0.34.0/configure/vcluster-yaml/control-plane/other/advanced/virtual-scheduler.mdx
---
title: Virtual scheduler
sidebar_label: virtualScheduler
sidebar_position: 3
description: Configure virtual scheduling.
sidebar_class_name: host-nodes
---

import VirtualSchedulerConfig from '../../../../../_partials/config/controlPlane/advanced/virtualScheduler.mdx'
import TenancySupport from '../../../../../_fragments/tenancy-support.mdx';

<TenancySupport hostNodes="true" />

<!-- vale off -->

# Virtual scheduler

:::warning virtualScheduler is deprecated
The `controlPlane.advanced.virtualScheduler` field is deprecated since vCluster 0.26. Use `controlPlane.distro.k8s.scheduler.enabled` instead. The deprecated field still works, but new configurations should use the current path.
:::

By default, vCluster reuses the control plane cluster scheduler to schedule workloads. This conserves compute resources.

If you also [sync PersistentVolumeClaim resources](../../../sync/to-host/storage/persistent-volume-claims.mdx), vCluster mirrors the related `CSIDriver`, `CSINode`, and `CSIStorageCapacity` objects into the tenant cluster. This allows the virtual scheduler to make storage-aware scheduling decisions.

In some cases, you might want to label or taint nodes inside the tenant cluster to influence scheduling decisions—for example, using [node affinity](https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity) or [topology spread constraints](https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/).

To support these use cases, vCluster allows you to run a scheduler inside the tenant cluster instead of reusing the control plane cluster’s scheduler.

## Enable the virtual scheduler

To use the virtual scheduler, you must enable the following:

- Syncing nodes from the control plane cluster (`sync.fromHost.nodes.enabled`)
- The virtual scheduler (`controlPlane.distro.k8s.scheduler.enabled`)

When the virtual scheduler is enabled:

- vCluster only syncs pods that already have a node assigned in the control plane cluster.
- You can label and taint nodes within the tenant cluster without affecting the control plane cluster.

Configure your `vcluster.yaml` to sync nodes from the control plane cluster and enable the virtual scheduler:

```yaml
sync:
  fromHost:
    nodes:
      enabled: true

controlPlane:
  distro:
    k8s:
      scheduler:
        enabled: true

```

This setting makes control plane cluster nodes available inside the tenant cluster. It allows the virtual scheduler to make scheduling decisions based on node labels and taints.

## Automatically enable sync features

When the virtual scheduler is enabled, the following resources are automatically synced from the control plane cluster:

- [CSI drivers](../../../sync/from-host/csi-drivers.mdx)
- [CSI nodes](../../..//sync/from-host/csi-nodes.mdx)
- [CSI storage capacities](../../../sync/from-host/csi-storage-capacities.mdx)

This automatic syncing only occurs if:

- Syncing for CSI resources from the control plane cluster is set to auto (the default).
- `PersistentVolumeClaim` syncing to the control plane cluster is enabled.

:::info
If you [sync PersistentVolumeClaim resources](../../../sync/to-host/storage/persistent-volume-claims.mdx), vCluster mirrors the related `CSIDriver`, `CSINode`, and `CSIStorageCapacity` objects into the tenant cluster. This allows the virtual scheduler to make storage-aware scheduling decisions.
:::

Manually disabling these features might result in incorrect pod scheduling behavior.

### Example

If your `vcluster.yaml` is configured as:

```yaml
controlPlane:
  distro:
    k8s:
      scheduler:
        enabled: true

sync:
  toHost:
    persistentVolumeClaims:
      enabled: true

  fromHost:
    # All 'auto' values below are set by default
    csiDrivers:
      enabled: auto
    csiNodes:
      enabled: auto
    csiStorageCapacities:
      enabled: auto
```

Then, vCluster automatically updates the config to:

```yaml
controlPlane:
  distro:
    k8s:
      scheduler:
        enabled: true

sync:
  toHost:
    persistentVolumeClaims:
      enabled: true

  # vCluster enables these values because the virtual scheduler is active
  fromHost:
    csiDrivers:
      enabled: true
    csiNodes:
      enabled: true
    csiStorageCapacities:
      enabled: true
```

## Config reference

<VirtualSchedulerConfig/>

## Additional resources

- [Sync `persistentVolumeClaims`](../../../sync/to-host/storage/persistent-volume-claims.mdx)
- [Sync `csiStorageCapacities`](../../../sync/from-host/csi-storage-capacities.mdx)
- [Sync `csiNodes`](../../../sync/from-host/csi-nodes.mdx)
- [Sync `csiDrivers`](../../../sync/from-host/csi-drivers.mdx)
